--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Wolfville_3732
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Lewis, Alfred Henry
@@ -12,6 +15,8 @@ creator:
 description: The Old Cattleman has many tales to tell of the days when the Wild West
   was truly wild, having spent his entire life in Wolfville--a time when desperadoes
   and mule-skinners, outlaws and lawmen, runaways and rawhiders, ran the town.
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/3732#Wolfville
 gutenberg_issued: '2003-02-01'
 gutenberg_type: Text
 identifiers:
